Add multi languages

--- a/Fantasy/Fantasy.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Countries/CountriesIndex.razor
@@ -1,9 +1,9 @@
 ﻿@page "/countries"
 
-<h3>Paises</h3>
+<h3>@Localizer["Countries"]</h3>
 
 <div class="mb-3">
-    <a class="btn btn-outline-primary btn-sm text-end" href="/countries/create">Nuevo País</a>
+    <a class="btn btn-outline-primary btn-sm text-end" href="/countries/create">@Localizer["New"] @Localizer["Country"]</a>
 </div>
 
 <GenericList MyList="Countries">
@@ -11,7 +11,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>País</th>
+                    <th>@Localizer["Country"]</th>
                     <th></th>
                 </tr>
             </thead>
@@ -23,8 +23,8 @@
                             @country.Name
                         </td>
                         <td>
-                            <a class="btn btn-outline-warning btn-sm">Editar</a>
-                            <button class="btn btn-outline-danger btn-sm">Borrar</button>
+                            <a class="btn btn-outline-warning btn-sm">@Localizer["Edit"]</a>
+                            <button class="btn btn-outline-danger btn-sm">@Localizer["Delete"]</button>
                         </td>
                     </tr>
                 }
