--- a/Fantasy/Fantasy.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Countries/CountriesIndex.razor
@@ -13,6 +13,7 @@
                 <tr>
                     <th>@Localizer["Country"]</th>
                     <th># @Localizer["Teams"]</th>
+                    <th>@Localizer["Actions"]</th>
                 </tr>
             </thead>
             <tbody>
