--- a/Fantasy/Fantasy.Frontend/Layout/NavMenu.razor
+++ b/Fantasy/Fantasy.Frontend/Layout/NavMenu.razor
@@ -14,9 +14,16 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> @Localizer["Home"]
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="countries">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> @Localizer["Countries"]
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="teams">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>@Localizer["Teams"]
             </NavLink>
         </div>
     </nav>
