--- a/Fantasy/Fantasy.Frontend/Pages/Teams/TeamsIndex.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Teams/TeamsIndex.razor
@@ -24,8 +24,8 @@
                         <td>
                             @team.Name
                         </td>
-                        <td>
-                            <img src="@team.ImageFull" style="width:90px;height:60px;" />
+                        <td class="text-center">
+                            <img src="@team.ImageFull" style="width:auto;height:60px;" />
                         </td>
                         <td>
                             @team.Country!.Name
