--- a/Fantasy/Fantasy.Frontend/Pages/Home.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Home.razor
@@ -2,5 +2,14 @@
 
 <PageTitle>Home</PageTitle>
 
+<AuthorizeView Roles="Admin">
+    <Authorized>
+        <p>Estas autenticado y autorizado, @context.User.Identity?.Name</p>
+    </Authorized>
+    <NotAuthorized>
+        <p>No estas autorizado</p>
+    </NotAuthorized>
+</AuthorizeView>
+
 <h1>@Localizer["Title"]</h1>
 <h2>@Localizer["Subtitle"]</h2>
