--- a/Fantasy/Fantasy.Frontend/Layout/NavMenu.razor
+++ b/Fantasy/Fantasy.Frontend/Layout/NavMenu.razor
@@ -1,4 +1,8 @@
 ﻿<MudNavMenu>
+@*     <MudStack AlignItems="AlignItems.Center">
+        <MudImage Src="images/Logo.png" Width="200" Class="p-3" />
+    </MudStack>
+    <MudDivider /> *@
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Rounded.Home">@Localizer["Home"]</MudNavLink>
     <MudDivider />
 
