--- a/Fantasy/Fantasy.Frontend/Pages/Auth/Login.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Auth/Login.razor
@@ -27,8 +27,17 @@
         </EditForm>
     </DialogContent>
     <DialogActions>
+            <MudStack Spacing="2" Style="padding: 2rem;">
         <MudItem xs="12" sm="12">
-            <MudLink Href="/Register" Underline="Underline.Always">@Localizer["NotUserYet"]</MudLink>
+            <MudLink Href="/Register" Underline="Underline.Always" Style="display: block; text-align: center;">
+                @Localizer["NotUserYet"]
+            </MudLink>
         </MudItem>
+        <MudItem xs="12" sm="12">
+            <MudLink OnClick="ShowModalResendConfirmationEmail" Underline="Underline.Always" Style="display: block; text-align: center;">
+                @Localizer["ResendAccountActivationEmail"]
+            </MudLink>
+        </MudItem>
+    </MudStack>
     </DialogActions>
 </MudDialog>
