--- a/Fantasy/Fantasy.Frontend/Pages/Auth/Login.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Auth/Login.razor
@@ -27,17 +27,16 @@
         </EditForm>
     </DialogContent>
     <DialogActions>
-            <MudStack Spacing="2" Style="padding: 2rem;">
-        <MudItem xs="12" sm="12">
-            <MudLink Href="/Register" Underline="Underline.Always" Style="display: block; text-align: center;">
+        <MudStack Spacing="2" AlignItems="AlignItems.Center" Justify="Justify.Center">
+            <MudLink Href="/Register" Underline="Underline.Always" Color="Color.Info" Class="mt-4">
                 @Localizer["NotUserYet"]
             </MudLink>
-        </MudItem>
-        <MudItem xs="12" sm="12">
-            <MudLink OnClick="ShowModalResendConfirmationEmail" Underline="Underline.Always" Style="display: block; text-align: center;">
+            <MudLink OnClick="ShowModalRecoverPassword" Underline="Underline.Always" Color="Color.Secondary">
+                @Localizer["ForgottenYourPassword"]
+            </MudLink>
+            <MudLink OnClick="ShowModalResendConfirmationEmail" Underline="Underline.Always" Color="Color.Warning">
                 @Localizer["ResendAccountActivationEmail"]
             </MudLink>
-        </MudItem>
-    </MudStack>
+        </MudStack>
     </DialogActions>
 </MudDialog>
