--- a/Fantasy/Fantasy.Frontend/Pages/Tournaments/TournamentEdit.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Tournaments/TournamentEdit.razor
@@ -1,3 +1,12 @@
-﻿<h3>TournamentEdit</h3>
-
-
+﻿@if (tournamentDTO is null)
+{
+    <Loading />
+}
+else
+{
+    <MudDialog>
+        <DialogContent>
+            <TournamentForm @ref="tournamentForm" TournamentDTO="tournamentDTO" OnValidSubmit="EditAsync" ReturnAction="Return" />
+        </DialogContent>
+    </MudDialog>
+}
