Add PredictionsController and Create and Edit Groups

--- a/Fantasy/Fantasy.Frontend/Layout/NavMenu.razor
+++ b/Fantasy/Fantasy.Frontend/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
         </Authorized>
     </AuthorizeView>
 
+    <AuthorizeView>
+        <MudNavLink Href="/groups" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SportsSoccer">@Localizer["MyGroups"]</MudNavLink>
+        <MudDivider />
+    </AuthorizeView>
+
     <MudNavLink Href="/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">@Localizer["About"]</MudNavLink>
     <MudDivider />
 </MudNavMenu>
