Changes to Home

--- a/Fantasy/Fantasy.Frontend/Pages/Home.razor
+++ b/Fantasy/Fantasy.Frontend/Pages/Home.razor
@@ -1,15 +1,62 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>@Localizer["Home"]</PageTitle>
 
-<AuthorizeView Roles="Admin">
-    <Authorized>
-        <p>Estas autenticado y autorizado, @context.User.Identity?.Name</p>
-    </Authorized>
-    <NotAuthorized>
-        <p>No estas autorizado</p>
-    </NotAuthorized>
-</AuthorizeView>
+<MudPaper Class="p-4 my-4">
+    <MudText Typo="Typo.h3" Align="Align.Center">@Localizer["Title"]</MudText>
+    <MudText Typo="Typo.h5" Align="Align.Center">@Localizer["Subtitle"]</MudText>
+</MudPaper>
 
-<h1>@Localizer["Title"]</h1>
-<h2>@Localizer["Subtitle"]</h2>
+<MudContainer MaxWidth="MaxWidth.Large">
+
+    @if (Groups == null)
+    {
+        <Loading />
+    }
+    else if (Groups.Count != 0)
+    {
+        <MudCarousel TData="Group" Style="height: 620px; display: flex; justify-content: center; align-items: center;">
+            @foreach (var group in Groups)
+            {
+                <MudCarouselItem>
+                    <MudCard Style="height: 100%; display: flex; flex-direction: column; justify-content: space-between; align-items: center;">
+                        <div style="padding: 2rem;">
+                            <MudCardMedia Image="@group.ImageFull" Alt="Group image" Style="width: 250px; height: 250px; object-fit: cover;" />
+                        </div>
+                        <MudCardContent Style="text-align: center;" Class="mt-8">
+                            <MudStack Spacing="2">
+                                <MudText Color="Color.Secondary" Typo="Typo.h3">@group.Name</MudText>
+                                <MudText>@group.Remarks</MudText>
+                                <MudStack Row="true" Spacing="2" AlignItems="AlignItems.Center">
+                                    <MudImage Src="@group.Admin.PhotoFull" Width="80" Height="80" Style="border-radius: 50%;" />
+                                    <MudText Color="Color.Secondary" Typo="Typo.h5">@group.Admin.FullName</MudText>
+                                    <MudText Color="Color.Info" Typo="Typo.h5">@group.Admin.Email</MudText>
+                                    <MudTooltip Text="@Localizer["CopyInvitationURLTitle"]">
+                                        <MudButton Variant="Variant.Filled"
+                                                   Color="Color.Secondary"
+                                                   OnClick="@(() => CopyInvitationAsync(group))"
+                                                   Disabled="@(!group.IsActive)">
+                                            <MudIcon Icon="@Icons.Material.Filled.ContentCopy" />
+                                        </MudButton>
+                                    </MudTooltip>
+                                </MudStack>
+                            </MudStack>
+                        </MudCardContent>
+                        <MudCardActions Style="width: 100%; justify-content: space-around;">
+                            <MudButton Variant="Variant.Filled"
+                                       EndIcon="@Icons.Material.Filled.SportsSoccer"
+                                       Color="Color.Primary">
+                                @Localizer["Predictions"]
+                            </MudButton>
+                            <MudButton Variant="Variant.Filled"
+                                       EndIcon="@Icons.Material.Filled.Stars"
+                                       Color="Color.Secondary">
+                                @Localizer["Positions"]
+                            </MudButton>
+                        </MudCardActions>
+                    </MudCard>
+                </MudCarouselItem>
+            }
+        </MudCarousel>
+    }
+</MudContainer>
